- Fixed bug #34087 (strtotime() does not work with date format "Y/m/d"). - Make use of YYMAXFILL. - Added support for using a . as hour/minute/second separator.